--- a/gas.ipynb
+++ b/gas.ipynb
@@ -616,7 +616,187 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def generate_visualizations(self, output_dir='/home/claude/visualizations'):\n",
+    "        \"\"\"\n",
+    "        Generar visualizaciones del análisis\n",
+    "        \"\"\"\n",
+    "        print(f\"\\n[10] GENERANDO VISUALIZACIONES - {self.mixture_name}\")\n",
+    "        print(\"-\" * 80)\n",
+    "        \n",
+    "        import os\n",
+    "        os.makedirs(output_dir, exist_ok=True)\n",
+    "        \n",
+    "        # 1. Evolución temporal de concentraciones\n",
+    "        print(f\"  - Generando gráfica de evolución temporal...\")\n",
+    "        fig, axes = plt.subplots(2, 1, figsize=(14, 8))\n",
+    "        \n",
+    "        time_subset = self.df['Time_s'][:10000]  # Primeros 10k puntos\n",
+    "        \n",
+    "        axes[0].plot(time_subset, self.df['CO_or_CH4_ppm'][:10000], \n",
+    "                    label='CO/CH₄', linewidth=0.8)\n",
+    "        axes[0].set_ylabel('Concentración (ppm)', fontsize=11)\n",
+    "        axes[0].set_title(f'Evolución temporal de concentraciones - {self.mixture_name}', \n",
+    "                         fontsize=13, fontweight='bold')\n",
+    "        axes[0].legend()\n",
+    "        axes[0].grid(True, alpha=0.3)\n",
+    "        \n",
+    "        axes[1].plot(time_subset, self.df['Ethylene_ppm'][:10000], \n",
+    "                    label='Etileno', color='orange', linewidth=0.8)\n",
+    "        axes[1].set_xlabel('Tiempo (s)', fontsize=11)\n",
+    "        axes[1].set_ylabel('Concentración (ppm)', fontsize=11)\n",
+    "        axes[1].legend()\n",
+    "        axes[1].grid(True, alpha=0.3)\n",
+    "        \n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f'{output_dir}/01_evolucion_temporal_{self.mixture_name}.png', \n",
+    "                   dpi=300, bbox_inches='tight')\n",
+    "        plt.close()\n",
+    "        \n",
+    "        # 2. Comparación de modelos\n",
+    "        print(f\"  - Generando gráfica de comparación de modelos...\")\n",
+    "        fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "        \n",
+    "        model_names = list(self.models.keys())\n",
+    "        mae_values = [self.models[name]['metrics']['mae'] for name in model_names]\n",
+    "        rmse_values = [self.models[name]['metrics']['rmse'] for name in model_names]\n",
+    "        \n",
+    "        x = np.arange(len(model_names))\n",
+    "        width = 0.35\n",
+    "        \n",
+    "        ax.bar(x - width/2, mae_values, width, label='MAE', alpha=0.8)\n",
+    "        ax.bar(x + width/2, rmse_values, width, label='RMSE', alpha=0.8)\n",
+    "        \n",
+    "        ax.set_xlabel('Modelo', fontsize=11)\n",
+    "        ax.set_ylabel('Error (ppm)', fontsize=11)\n",
+    "        ax.set_title(f'Comparación de modelos - {self.mixture_name}', \n",
+    "                    fontsize=13, fontweight='bold')\n",
+    "        ax.set_xticks(x)\n",
+    "        ax.set_xticklabels(model_names, rotation=15, ha='right')\n",
+    "        ax.legend()\n",
+    "        ax.grid(True, alpha=0.3, axis='y')\n",
+    "        \n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f'{output_dir}/02_comparacion_modelos_{self.mixture_name}.png', \n",
+    "                   dpi=300, bbox_inches='tight')\n",
+    "        plt.close()\n",
+    "        \n",
+    "        # 3. Predicciones vs Real (Test)\n",
+    "        print(f\"  - Generando gráfica de predicciones vs real...\")\n",
+    "        fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
+    "        \n",
+    "        y_true = self.results['test']['y_true']\n",
+    "        y_pred = self.results['test']['y_pred']\n",
+    "        \n",
+    "        for i, target in enumerate(self.data['target_cols']):\n",
+    "            axes[i].scatter(y_true[:, i], y_pred[:, i], alpha=0.5, s=10)\n",
+    "            axes[i].plot([y_true[:, i].min(), y_true[:, i].max()], \n",
+    "                        [y_true[:, i].min(), y_true[:, i].max()], \n",
+    "                        'r--', linewidth=2, label='Perfecto')\n",
+    "            axes[i].set_xlabel('Real (ppm)', fontsize=11)\n",
+    "            axes[i].set_ylabel('Predicho (ppm)', fontsize=11)\n",
+    "            axes[i].set_title(f'{target}\\nR²={self.results[\"test\"][\"r2_per_target\"][i]:.4f}', \n",
+    "                            fontsize=12)\n",
+    "            axes[i].legend()\n",
+    "            axes[i].grid(True, alpha=0.3)\n",
+    "        \n",
+    "        plt.suptitle(f'Predicciones vs Real - {self.mixture_name}', \n",
+    "                    fontsize=14, fontweight='bold')\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f'{output_dir}/03_predicciones_vs_real_{self.mixture_name}.png', \n",
+    "                   dpi=300, bbox_inches='tight')\n",
+    "        plt.close()\n",
+    "        \n",
+    "        # 4. Distribución de residuales\n",
+    "        print(f\"  - Generando gráfica de distribución de residuales...\")\n",
+    "        fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
+    "        \n",
+    "        residuals = self.results['anomalies']['residuals']\n",
+    "        \n",
+    "        for i, target in enumerate(self.data['target_cols']):\n",
+    "            axes[i].hist(residuals[:, i], bins=50, alpha=0.7, edgecolor='black')\n",
+    "            axes[i].axvline(0, color='red', linestyle='--', linewidth=2, label='Cero')\n",
+    "            axes[i].set_xlabel('Residual (ppm)', fontsize=11)\n",
+    "            axes[i].set_ylabel('Frecuencia', fontsize=11)\n",
+    "            axes[i].set_title(f'{target}\\nμ={residuals[:, i].mean():.4f}, σ={residuals[:, i].std():.4f}', \n",
+    "                            fontsize=12)\n",
+    "            axes[i].legend()\n",
+    "            axes[i].grid(True, alpha=0.3, axis='y')\n",
+    "        \n",
+    "        plt.suptitle(f'Distribución de residuales - {self.mixture_name}', \n",
+    "                    fontsize=14, fontweight='bold')\n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f'{output_dir}/04_distribucion_residuales_{self.mixture_name}.png', \n",
+    "                   dpi=300, bbox_inches='tight')\n",
+    "        plt.close()\n",
+    "        \n",
+    "        # 5. Robustez ante fallos\n",
+    "        print(f\"  - Generando gráfica de robustez...\")\n",
+    "        fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "        \n",
+    "        failure_rates = [r['failure_rate']*100 for r in self.results['robustness']]\n",
+    "        mean_maes = [r['mean_mae'] for r in self.results['robustness']]\n",
+    "        std_maes = [r['std_mae'] for r in self.results['robustness']]\n",
+    "        \n",
+    "        ax.errorbar(failure_rates, mean_maes, yerr=std_maes, \n",
+    "                   marker='o', markersize=8, capsize=5, linewidth=2)\n",
+    "        ax.axhline(self.results['test']['mae'], color='red', linestyle='--', \n",
+    "                  linewidth=2, label='MAE sin fallos')\n",
+    "        ax.set_xlabel('Tasa de fallo de sensores (%)', fontsize=11)\n",
+    "        ax.set_ylabel('MAE (ppm)', fontsize=11)\n",
+    "        ax.set_title(f'Robustez ante fallos de sensores - {self.mixture_name}', \n",
+    "                    fontsize=13, fontweight='bold')\n",
+    "        ax.legend()\n",
+    "        ax.grid(True, alpha=0.3)\n",
+    "        \n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f'{output_dir}/05_robustez_fallos_{self.mixture_name}.png', \n",
+    "                   dpi=300, bbox_inches='tight')\n",
+    "        plt.close()\n",
+    "        \n",
+    "        print(f\"\\n  ✓ Visualizaciones guardadas en: {output_dir}\")\n",
+    "        \n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets = [\n",
+    "        {\n",
+    "            'filepath': 'datasets/ethylene_CO.txt',\n",
+    "            'mixture_name': 'Etileno_CO'\n",
+    "        },\n",
+    "        {\n",
+    "            'filepath': 'datasets/ethylene_methane.txt',\n",
+    "            'mixture_name': 'Etileno_Metano'\n",
+    "        }\n",
+    "    ]\n",
+    "    \n",
+    "all_results = {}\n",
+    "    \n",
+    "for dataset_info in datasets:\n",
+    "    filepath = dataset_info['filepath']\n",
+    "    mixture_name = dataset_info['mixture_name']\n",
+    "    \n",
+    "    print(f\"\\n\\n{'='*80}\")\n",
+    "    print(f\"PROCESANDO: {mixture_name}\")\n",
+    "    print(f\"{'='*80}\\n\")\n",
+    "    \n",
+    "    # Verificar si el archivo existe\n",
+    "    import os\n",
+    "    if not os.path.exists(filepath):\n",
+    "        print(f\"⚠ ADVERTENCIA: Archivo no encontrado: {filepath}\")\n",
+    "        print(f\"  Por favor, descarga el dataset desde:\")\n",
+    "        print(f\"  https://archive.ics.uci.edu/dataset/322\")\n",
+    "        print(f\"  Y coloca los archivos .txt en /home/claude/\\n\")\n",
+    "        continue\n",
+    "    \n",
+    "  "
+   ]
   }
  ],
  "metadata": {
