--- a/gas.ipynb
+++ b/gas.ipynb
@@ -109,130 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[1] CARGANDO DATASETS\n",
-      "================================================================================\n",
-      "\n",
-      "📁 Cargando: Etileno_CO\n",
-      "--------------------------------------------------------------------------------\n",
-      "  → Leyendo archivo...\n",
-      "    ⚠ Línea 1: 12 columnas (esperadas 19)\n",
-      "  ✓ Datos cargados exitosamente\n",
-      "    - Registros: 4,208,261\n",
-      "    - Columnas: 19\n",
-      "    - Duración: 42088 segundos (11.69 horas)\n",
-      "    - Memoria: 610.02 MB\n",
-      "    - Valores faltantes: 0\n",
-      "    - Tipo de datos: float64 (todas las columnas)\n",
-      "\n",
-      "📁 Cargando: Etileno_Metano\n",
-      "--------------------------------------------------------------------------------\n",
-      "  → Leyendo archivo...\n",
-      "    ⚠ Línea 1: 12 columnas (esperadas 19)\n",
-      "  ✓ Datos cargados exitosamente\n",
-      "    - Registros: 4,178,504\n",
-      "    - Columnas: 19\n",
-      "    - Duración: 41790 segundos (11.61 horas)\n",
-      "    - Memoria: 605.71 MB\n",
-      "    - Valores faltantes: 0\n",
-      "    - Tipo de datos: float64 (todas las columnas)\n",
-      "\n",
-      "✓ Total de datasets cargados: 2\n",
-      "================================================================================\n",
-      "\n",
-      "📊 Comparación de datasets:\n",
-      "--------------------------------------------------------------------------------\n",
-      "  Etileno_CO          :  4,208,261 registros, 610.02 MB\n",
-      "  Etileno_Metano      :  4,178,504 registros, 605.71 MB\n",
-      "\n",
-      "📋 Muestra de datos del primer dataset:\n",
-      "--------------------------------------------------------------------------------\n",
-      "   Time_s  CO_or_CH4_ppm  Ethylene_ppm  Sensor_1  Sensor_2  Sensor_3  \\\n",
-      "0    0.00            0.0           0.0    -50.85     -1.95    -41.82   \n",
-      "1    0.01            0.0           0.0    -49.40     -5.53    -42.78   \n",
-      "2    0.01            0.0           0.0    -40.04    -16.09    -27.59   \n",
-      "3    0.03            0.0           0.0    -47.14    -10.57    -32.28   \n",
-      "4    0.04            0.0           0.0    -33.58    -20.79    -33.25   \n",
-      "5    0.05            0.0           0.0    -48.59    -11.54    -36.16   \n",
-      "6    0.06            0.0           0.0    -48.27     -9.11    -31.31   \n",
-      "7    0.07            0.0           0.0    -47.14     -4.56    -16.57   \n",
-      "8    0.07            0.0           0.0    -42.30     -2.77    -20.79   \n",
-      "9    0.09            0.0           0.0    -44.56      3.58    -45.04   \n",
-      "\n",
-      "   Sensor_4  Sensor_5  Sensor_6  Sensor_7  Sensor_8  Sensor_9  Sensor_10  \\\n",
-      "0      1.30     -4.07    -28.73    -13.49     -3.25  55139.95   50669.50   \n",
-      "1      0.49      3.58    -34.55     -9.59      5.37  54395.77   50046.91   \n",
-      "2      0.00     -7.16    -42.14    -12.52     -5.86  53960.02   49299.30   \n",
-      "3      4.40    -11.22    -37.94     -7.16     -1.14  53047.71   48907.00   \n",
-      "4      6.03      3.42    -34.22    -14.46      8.31  52700.28   48330.96   \n",
-      "5      6.03      0.33    -29.05    -16.74     -1.14  51910.52   47609.00   \n",
-      "6      5.37     -7.97    -30.34     -8.62      7.00  51458.44   47047.36   \n",
-      "7      4.40     -2.28    -24.35    -13.17     -6.34  51043.22   46757.50   \n",
-      "8     23.98     -2.12    -27.59     -6.83     -0.81  50353.63   46196.84   \n",
-      "9      2.77     -0.65    -35.52     -7.64     -6.34  49853.87   45652.18   \n",
-      "\n",
-      "   Sensor_11  Sensor_12  Sensor_13  Sensor_14  Sensor_15  Sensor_16  \n",
-      "0    9626.26    9762.62   24544.02   21420.68    7650.61    6928.42  \n",
-      "1    9433.20    9591.21   24137.13   20930.33    7498.79    6800.66  \n",
-      "2    9324.40    9449.81   23628.90   20504.94    7369.67    6697.47  \n",
-      "3    9170.64    9305.58   23101.66   20101.42    7285.13    6578.52  \n",
-      "4    9073.64    9163.47   22689.54   19694.07    7156.74    6468.32  \n",
-      "5    8982.88    9021.08   22159.12   19332.57    7067.61    6385.31  \n",
-      "6    8860.51    8966.48   21931.81   19027.69    6976.13    6300.97  \n",
-      "7    8776.93    8868.04   21504.46   18780.21    6900.01    6248.81  \n",
-      "8    8709.46    8775.21   21124.62   18439.18    6827.34    6183.33  \n",
-      "9    8623.26    8682.15   20835.63   18209.37    6789.64    6101.90  \n",
-      "\n",
-      "📊 Estadísticas básicas:\n",
-      "             Time_s  CO_or_CH4_ppm  Ethylene_ppm      Sensor_1      Sensor_2  \\\n",
-      "count  4.208261e+06   4.208261e+06  4.208261e+06  4.208261e+06  4.208261e+06   \n",
-      "mean   2.104459e+04   1.276202e+02  5.320436e+00  2.065617e+03  5.062184e+02   \n",
-      "std    1.214998e+04   1.607772e+02  5.624127e+00  7.902609e+02  1.530128e+03   \n",
-      "min    0.000000e+00   0.000000e+00  0.000000e+00 -5.262000e+01 -3.649000e+01   \n",
-      "25%    1.052123e+04   0.000000e+00  0.000000e+00  1.323470e+03  9.120000e+00   \n",
-      "50%    2.104591e+04   0.000000e+00  6.670000e+00  1.789090e+03  3.889000e+01   \n",
-      "75%    3.156678e+04   2.666700e+02  1.000000e+01  2.869440e+03  1.589000e+02   \n",
-      "max    4.208755e+04   5.333300e+02  2.000000e+01  3.553640e+03  2.811651e+04   \n",
-      "\n",
-      "           Sensor_3      Sensor_4      Sensor_5      Sensor_6      Sensor_7  \\\n",
-      "count  4.208261e+06  4.208261e+06  4.208261e+06  4.208261e+06  4.208261e+06   \n",
-      "mean   4.372539e+03  4.799250e+03  1.894957e+03  2.214692e+03  5.086639e+03   \n",
-      "std    1.608018e+03  1.733017e+03  4.395373e+02  4.353987e+02  1.966451e+03   \n",
-      "min   -4.504000e+01 -8.940000e+00 -1.219000e+01 -4.214000e+01 -2.322000e+01   \n",
-      "25%    2.986960e+03  3.282310e+03  1.503460e+03  1.856650e+03  3.241950e+03   \n",
-      "50%    4.494330e+03  4.946720e+03  1.984550e+03  2.272780e+03  5.224880e+03   \n",
-      "75%    5.658290e+03  6.178210e+03  2.262740e+03  2.566470e+03  6.719280e+03   \n",
-      "max    8.641340e+03  9.221020e+03  2.904040e+03  3.502110e+03  9.883500e+03   \n",
-      "\n",
-      "           Sensor_8      Sensor_9     Sensor_10     Sensor_11     Sensor_12  \\\n",
-      "count  4.208261e+06  4.208261e+06  4.208261e+06  4.208261e+06  4.208261e+06   \n",
-      "mean   5.385428e+03  1.186241e+03  1.219252e+03  4.871079e+03  3.926250e+03   \n",
-      "std    2.072383e+03  4.531719e+02  4.308765e+02  1.707681e+03  1.364496e+03   \n",
-      "min   -1.382000e+01  1.597400e+02  2.153100e+02  8.622200e+02  8.654900e+02   \n",
-      "25%    3.448620e+03  9.343300e+02  9.419200e+02  3.435680e+03  2.728930e+03   \n",
-      "50%    5.537910e+03  1.140320e+03  1.176600e+03  5.016130e+03  4.120240e+03   \n",
-      "75%    7.104200e+03  1.543660e+03  1.557780e+03  6.126830e+03  4.967480e+03   \n",
-      "max    1.052104e+04  5.513995e+04  5.066950e+04  9.626260e+03  9.762620e+03   \n",
-      "\n",
-      "          Sensor_13     Sensor_14     Sensor_15     Sensor_16  \n",
-      "count  4.208261e+06  4.208261e+06  4.208261e+06  4.208261e+06  \n",
-      "mean   9.281877e+02  1.035772e+03  5.289323e+03  4.309685e+03  \n",
-      "std    1.677561e+02  1.741085e+02  1.984057e+03  1.584038e+03  \n",
-      "min    6.095700e+02  6.738900e+02  5.467300e+02  4.885800e+02  \n",
-      "25%    8.083400e+02  9.102500e+02  3.642120e+03  2.805070e+03  \n",
-      "50%    9.298600e+02  1.060700e+03  5.320550e+03  4.543040e+03  \n",
-      "75%    1.033490e+03  1.161370e+03  6.739320e+03  5.565070e+03  \n",
-      "max    2.454402e+04  2.142068e+04  1.066530e+04  7.874490e+03  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ============================================================================\n",
     "# CELDA 3: CARGAR AMBOS DATASETS (SIN ELIMINAR FILAS)\n",
@@ -320,6 +199,13 @@
     "    print(\"\\n📊 Estadísticas básicas:\")\n",
     "    print(first_dataset.describe())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1263,6 +1149,146 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n[9] PRUEBAS DE ROBUSTEZ\")\n",
+    "print(\"=\"*80)\n",
+    "\n",
+    "for mixture_name, data in data_all.items():\n",
+    "    tt = data['train_test']\n",
+    "    test_res = data['test_results']\n",
+    "    best_model = test_res['best_model']\n",
+    "    baseline_mae = test_res['mae']\n",
+    "    \n",
+    "    print(f\"\\n💪 Probando robustez: {mixture_name}\")\n",
+    "    print(\"-\" * 80)\n",
+    "    print(f\"  MAE baseline (sin fallos): {baseline_mae:.4f} ppm\")\n",
+    "    \n",
+    "    robustness_results = []\n",
+    "    \n",
+    "    for failure_rate in PARAMS['failure_rates']:\n",
+    "        maes = []\n",
+    "        \n",
+    "        for trial in range(PARAMS['n_trials']):\n",
+    "            X_test_failed = tt['X_test'].copy()\n",
+    "            n_features = tt['X_test'].shape[1]\n",
+    "            n_failures = int(n_features * failure_rate)\n",
+    "            failed_indices = np.random.choice(n_features, n_failures, replace=False)\n",
+    "            X_test_failed[:, failed_indices] = 0\n",
+    "            \n",
+    "            y_pred_failed = best_model.predict(X_test_failed)\n",
+    "            mae_failed = mean_absolute_error(tt['y_test'], y_pred_failed)\n",
+    "            maes.append(mae_failed)\n",
+    "        \n",
+    "        mean_mae = np.mean(maes)\n",
+    "        std_mae = np.std(maes)\n",
+    "        degradation = ((mean_mae - baseline_mae) / baseline_mae) * 100\n",
+    "        \n",
+    "        print(f\"    Fallo {failure_rate*100:.0f}%: MAE={mean_mae:.4f}±{std_mae:.4f} ppm, Degradación={degradation:+.2f}%\")\n",
+    "        \n",
+    "        robustness_results.append({\n",
+    "            'failure_rate': failure_rate,\n",
+    "            'mean_mae': mean_mae,\n",
+    "            'std_mae': std_mae,\n",
+    "            'degradation_pct': degradation\n",
+    "        })\n",
+    "    \n",
+    "    data_all[mixture_name]['robustness_results'] = robustness_results\n",
+    "\n",
+    "print(f\"\\n✓ Pruebas de robustez completadas para {len(data_all)} datasets\")\n",
+    "print(\"=\"*80)\n",
+    "\n",
+    "# Visualización comparativa de robustez\n",
+    "print(\"\\n  Comparación de robustez entre mezclas:\")\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(16, 6))\n",
+    "\n",
+    "# Gráfica 1: MAE vs Tasa de fallo\n",
+    "ax = axes[0]\n",
+    "for mixture_name, data in data_all.items():\n",
+    "    test_res = data['test_results']\n",
+    "    robustness_results = data['robustness_results']\n",
+    "    \n",
+    "    failure_rates_pct = [r['failure_rate']*100 for r in robustness_results]\n",
+    "    mean_maes = [r['mean_mae'] for r in robustness_results]\n",
+    "    std_maes = [r['std_mae'] for r in robustness_results]\n",
+    "    \n",
+    "    ax.errorbar(failure_rates_pct, mean_maes, yerr=std_maes,\n",
+    "               marker='o', markersize=8, capsize=5, linewidth=2,\n",
+    "               label=f'{mixture_name} (baseline={test_res[\"mae\"]:.2f})')\n",
+    "    \n",
+    "ax.set_xlabel('Tasa de fallo de sensores (%)', fontsize=12)\n",
+    "ax.set_ylabel('MAE (ppm)', fontsize=12)\n",
+    "ax.set_title('Robustez ante fallos - MAE', fontsize=13, fontweight='bold')\n",
+    "ax.legend(fontsize=10)\n",
+    "ax.grid(True, alpha=0.3)\n",
+    "\n",
+    "# Gráfica 2: Degradación porcentual\n",
+    "ax = axes[1]\n",
+    "for mixture_name, data in data_all.items():\n",
+    "    robustness_results = data['robustness_results']\n",
+    "    \n",
+    "    failure_rates_pct = [r['failure_rate']*100 for r in robustness_results]\n",
+    "    degradations = [r['degradation_pct'] for r in robustness_results]\n",
+    "    \n",
+    "    ax.plot(failure_rates_pct, degradations,\n",
+    "           marker='o', markersize=8, linewidth=2, label=mixture_name)\n",
+    "\n",
+    "ax.axhline(0, color='red', linestyle='--', linewidth=1.5, label='Sin degradación')\n",
+    "ax.set_xlabel('Tasa de fallo de sensores (%)', fontsize=12)\n",
+    "ax.set_ylabel('Degradación del MAE (%)', fontsize=12)\n",
+    "ax.set_title('Robustez ante fallos - Degradación', fontsize=13, fontweight='bold')\n",
+    "ax.legend(fontsize=10)\n",
+    "ax.grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Tabla comparativa de robustez\n",
+    "print(\"\\n  📋 TABLA COMPARATIVA DE ROBUSTEZ:\")\n",
+    "print(\"  \" + \"=\"*90)\n",
+    "print(f\"  {'Mezcla':<20} {'Tasa Fallo':<12} {'MAE':<15} {'Degradación':<15} {'CV':<10}\")\n",
+    "print(\"  \" + \"-\"*90)\n",
+    "\n",
+    "for mixture_name, data in data_all.items():\n",
+    "    robustness_results = data['robustness_results']\n",
+    "    for result in robustness_results:\n",
+    "        cv = (result['std_mae'] / result['mean_mae']) * 100\n",
+    "        print(f\"  {mixture_name:<20} {result['failure_rate']*100:>5.0f}%       \"\n",
+    "              f\"{result['mean_mae']:>6.4f}±{result['std_mae']:.4f}  \"\n",
+    "              f\"{result['degradation_pct']:>+7.2f}%       \"\n",
+    "              f\"{cv:>6.2f}%\")\n",
+    "    print(\"  \" + \"-\"*90)\n",
+    "\n",
+    "print(\"  \" + \"=\"*90)\n",
+    "\n",
+    "# Análisis de hipótesis H4\n",
+    "print(\"\\n  📊 ANÁLISIS DE HIPÓTESIS H4:\")\n",
+    "print(\"  \" + \"-\"*80)\n",
+    "print(\"  Hipótesis: Agregación mejora robustez ≥15% reducción de variabilidad\")\n",
+    "print()\n",
+    "for mixture_name, data in data_all.items():\n",
+    "    robustness_results = data['robustness_results']\n",
+    "    avg_cv = np.mean([r['std_mae'] / r['mean_mae'] * 100 for r in robustness_results])\n",
+    "    max_degradation = max([r['degradation_pct'] for r in robustness_results])\n",
+    "    \n",
+    "    print(f\"  {mixture_name}:\")\n",
+    "    print(f\"    CV promedio: {avg_cv:.2f}%\")\n",
+    "    print(f\"    Degradación máxima: {max_degradation:.2f}%\")\n",
+    "    print(f\"    Robustez: {'✓ Buena' if max_degradation < 30 else '⚠ Moderada'} (degradación < 30%)\")\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
