--- a/gas_def.ipynb
+++ b/gas_def.ipynb
@@ -409,12 +409,11 @@
         "        #Velocidad absoluta (magnitud del cambio)\n",
         "        df_trans[f'{sensor}_abs_velocity'] = df_trans[f'{sensor}_velocity'].abs()\n",
         "    \n",
-        "    #3. TENDENCIA DE CORTO PLAZO (OPTIMIZADO - sin polyfit)\n",
+        "    #3. TENDENCIA DE CORTO PLAZO\n",
         "    print(\"  3. Calculando tendencias de corto plazo (optimizado)...\")\n",
         "    \n",
         "    for sensor in sensor_cols:\n",
         "        #Tendencia = diferencia entre punto actual y hace 5 muestras\n",
-        "        #Equivalente a pendiente pero 100x más rápido que polyfit\n",
         "        df_trans[f'{sensor}_trend5'] = df_trans[sensor] - df_trans[sensor].shift(5)\n",
         "        \n",
         "        #Variabilidad reciente\n",
