--- a/gas_def.ipynb
+++ b/gas_def.ipynb
@@ -2,15 +2,15 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "✓ Librerías importadas\n",
-            "✓ Directorios creados: models/, results/, figures/\n"
+            "Librerías importadas\n",
+            "Directorios creados: models/, results/, figures/\n"
           ]
         }
       ],
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -239,7 +239,7 @@
               "4    9073.64    9163.47   22689.54   19694.07    7156.74    6468.32  "
             ]
           },
-          "execution_count": 3,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
